Fixed shapes relic.

--- a/src/main/resources/paleoftheancients/localization/eng/relics.json
+++ b/src/main/resources/paleoftheancients/localization/eng/relics.json
@@ -85,7 +85,7 @@
     "DESCRIPTIONS": [
       "Whenever you play a card, flip this relic. NL If it was a",
       "n #rAttack, gain 3 Dexterity this turn.",
-      " #ySkill, gain 3 Attack this turn."
+      " #ySkill, gain 3 Strength this turn."
     ]
   }
 }
