Removed some unnecessary logs. Woke Bloke and Guardian now have relics.

--- a/src/main/resources/paleoftheancients/localization/eng/events.json
+++ b/src/main/resources/paleoftheancients/localization/eng/events.json
@@ -36,7 +36,7 @@
       " #yFocus...",
       "#yLet #ygo...",
       "#yHold #yon",
-      "Heal to max HP and Lose #r",
+      "Heal to max HP and Lose ",
       "Copy a card in your deck",
       "Leave"
     ]
