--- a/src/main/resources/paleoftheancients/localization/zhs/events.json
+++ b/src/main/resources/paleoftheancients/localization/zhs/events.json
@@ -36,7 +36,7 @@
       " #y集中精神……",
       "#y前进……",
       "#y坚持",
-      "回复到最大生命并失去 #r",
+      "回复到最大生命并失去 ",
       "从牌组中复制一张牌",
       "离开"
     ]
