Buffed Silent on higher ascension. Bugfix in BossBurn.

--- a/src/main/resources/paleoftheancients/localization/eng/relics.json
+++ b/src/main/resources/paleoftheancients/localization/eng/relics.json
@@ -81,7 +81,7 @@
   },
   "paleoftheancients:SoulOfTheShapes": {
     "NAME": "Shifting Mass",
-    "FLAVOR": "Constantly in flux between delectable and repulsive.",
+    "FLAVOR": "Constantly in flux between delectable and disgusting.",
     "DESCRIPTIONS": [
       "Whenever you play a card, flip this relic. NL If it was a",
       "n #rAttack, gain 3 Dexterity this turn.",
