New Boss: Watcher. New Relic: Watcher relic. Defect now actually works off monster rng. Defect kinetic barrier and starting orb slots now affected by ascension. Vixen now applies percentage based buffs directly when the threshold is breached instead of taking a turn to apply them. Silent and Deca now purge the blasphemy debuff, just because you can't see the second phase coming the first time. Some QoL things for myself.

--- a/src/main/resources/paleoftheancients/localization/eng/powers.json
+++ b/src/main/resources/paleoftheancients/localization/eng/powers.json
@@ -407,5 +407,11 @@
       "Every #b",
       " damage taken, gain 1 #rStrength this turn."
     ]
+  },
+
+  "paleoftheancients:ReachedHeavenPower": {
+    "DESCRIPTIONS": [
+      "Able to use #yThrough #yViolence."
+    ]
   }
 }
