Watcher now gives some cards to disrupt her pattern to help against burst damage.

--- a/src/main/resources/paleoftheancients/localization/eng/cards.json
+++ b/src/main/resources/paleoftheancients/localization/eng/cards.json
@@ -101,6 +101,11 @@
     "DESCRIPTION": "The REAL show begins now!"
   },
 
+  "paleoftheancients:RemoveWrath": {
+    "NAME": "Serenity",
+    "DESCRIPTION": "Retain Purge. NL Does nothing. NL Nice try though.",
+    "UPGRADE_DESCRIPTION": "Retain Purge. NL Enemy enters Calm and changes Intent."
+  },
 
   "paleoftheancients:Doot": {
     "NAME": "Doot"
