Finalized Bandit. Implemented Bandit relic (thanks for idea, vex).

--- a/src/main/resources/paleoftheancients/localization/eng/monsters.json
+++ b/src/main/resources/paleoftheancients/localization/eng/monsters.json
@@ -214,7 +214,7 @@
       "~Hello~ ~","...~",
       "I want to play a #r@game.@",
       "Wow, you're @slow.@",
-      "Look who's on top of the game!",
+      "@Look@ @who's@ @on@ @top@ @of@ @the@ @game!@",
       "You know the game quite well."
     ]
   }
