--- a/src/main/resources/paleoftheancients/localization/zhs/powers.json
+++ b/src/main/resources/paleoftheancients/localization/zhs/powers.json
@@ -35,14 +35,14 @@
   },
   
   "paleoftheancients:PocketFactoryPower": {
-    "NAME": "移动工厂",
+    "NAME": "便携工厂",
     "DESCRIPTIONS": [
       "回合结束时，如果场上少于 #b"," 个 #y铜制圆球 ，生成一个 #y铜制圆球 。"
     ]
   },
 
   "paleoftheancients:PrematureAwakening": {
-    "NAME": "过早觉醒",
+    "NAME": "提前觉醒",
     "DESCRIPTIONS": [
       "在 #y"," 回合内造成的伤害减半。"," 回合内造成的伤害减半。"
     ]
@@ -424,6 +424,44 @@
     "NAME": "手牌扩充",
     "DESCRIPTIONS": [
       "#y手牌数上限 提高 #b"
+    ]
+  },
+  "paleoftheancients:BoardBoundPower": {
+    "NAME": "棋盘",
+    "DESCRIPTIONS": [
+      "移动",
+      "受 #r路径 约束。"," NL 你的牌获得 #r移动 值 （所有ID相同的牌共享数值） 。 NL 每当你打出一张牌，根据 #r移动 前进相应 #棋格 。 NL （没有 #r移动 数的默认为1）。",
+      " NL 回合结束时，至多 #r变换 #b"," 个 #y空白 #y","棋格","棋格"," 为 #r稀有棋格 。"
+    ]
+  },
+  "paleoftheancients:KeyFinisherPower": {
+    "NAME": "致胜关键",
+    "DESCRIPTIONS": [
+      "落在 #y棋格 上的效果额外触发 #b"," ","次","次。"
+    ]
+  },
+  "paleoftheancients:ImprisonedPower": {
+    "NAME": "囚禁",
+    "DESCRIPTIONS": [
+      "不能在 #r路径 中 #r移动 。"
+    ]
+  },
+  "paleoftheancients:EmptyMindPower": {
+    "NAME": "放空心思",
+    "DESCRIPTIONS": [
+      "每当棋子落在 #r空白棋格 时，获得 #b"," 点 #y格挡 。"
+    ]
+  },
+  "paleoftheancients:RacingSpeedPower": {
+    "NAME": "宛如赛车",
+    "DESCRIPTIONS": [
+      "每当经过或落在 #y起点 时，获得 #b"," 点 #y力量 并使所有敌人失去 #b"," 点 #y力量 和 #y敏捷 。"
+    ]
+  },
+  "paleoftheancients:EnergyDownNextTurnPower": {
+    "NAME": "精疲力竭",
+    "DESCRIPTIONS": [
+      "#r下回合 开始时你失去 #b"," [E] 。"
     ]
   }
 }
