"a small fix" ~Rita-B

--- a/src/main/resources/paleoftheancients/localization/zhs/monsters.json
+++ b/src/main/resources/paleoftheancients/localization/zhs/monsters.json
@@ -206,11 +206,11 @@
       "死亡前冲",
       "超级大跳",
       "快乐攻击",
-      "按“F”",
+      "按“F”致敬",
       "犯蠢一笑"
     ],
     "DIALOG": [
-      "~你好~ ~","...~",
+      "~你好啊，~ ~","...~",
       "我想跟你来局 #r@游戏@ 。",
       "哇，你这也 @太慢了@ 吧。",
       "@看看谁才是头号玩家！@",
