--- a/src/main/resources/paleoftheancients/localization/zhs/relics.json
+++ b/src/main/resources/paleoftheancients/localization/zhs/relics.json
@@ -99,7 +99,7 @@
     "NAME": "好奇",
     "FLAVOR": "被全世界的卡牌游戏玩家所厌恶。",
     "DESCRIPTIONS": [
-      "每当你被给予一次 #y能力 ，获得 #b"," 点 #y力量 。"
+      "每当你被给予一次 #y效果 ，获得 #b"," 点 #y力量 。"
     ]
   },
   "paleoftheancients:SoulOfTheBard": {
@@ -120,7 +120,7 @@
   },
   "paleoftheancients:SoulOfTheWatcher": {
     "NAME": "神珠",
-    "FLAVOR": "",
+    "FLAVOR": "我想不出来有什么遗物描述。",
     "DESCRIPTIONS": [
       "每当你额外抽牌时，获得 #b"," 层 #y真言 。"
     ]
@@ -129,7 +129,7 @@
     "NAME": "魔改骰子",
     "FLAVOR": "你知道吗：你可以拜托Vex给你做爬塔mod！？",
     "DESCRIPTIONS": [
-      "每场战斗开始时，进入 #b","-长度 全是 #r正面棋格 的 #y路径 。你打出牌的耗能将 #r前进 等量的 #y棋格 。"
+      "每场战斗开始时，进入 #b","格长 全是 #r正面棋格 的 #y路径 。你打出牌的耗能将 #r前进 等量的 #y棋格 。"
     ]
   },
   "paleoftheancients:KeyRelic": {
@@ -137,7 +137,7 @@
     "FLAVOR": "曾经的努力……",
     "DESCRIPTIONS": [
       "每场战斗开始时， ",""," 获得 #b1 点 #y力量 ", " 获得 #b1 点 #y敏捷 ", " 获得 #b1 点 #y集中 。",
-      "回复 #b2 点生命", "额外获得 [E] ", "额外抽 #b2 张牌。",
+      "回复 #b2 点生命", "额外获得 [E] 。", "额外抽 #b2 张牌。",
       "获得 #b10 点 #y格挡"," 和 ","给予所有敌人 #b1 "," 层 #y虚弱 "," #y易伤 "," 。"
     ]
   }
