Implemented enemies that can have more than 1 move per round.

--- a/src/main/resources/paleoftheancients/localization/zhs/relics.json
+++ b/src/main/resources/paleoftheancients/localization/zhs/relics.json
@@ -133,7 +133,7 @@
     ]
   },
   "paleoftheancients:KeyRelic": {
-    "NAME": "认同",
+    "NAME": "认可",
     "FLAVOR": "曾经的努力……",
     "DESCRIPTIONS": [
       "每场战斗开始时， ",""," 获得 #b1 点 #y力量 ", " 获得 #b1 点 #y敏捷 ", " 获得 #b1 点 #y集中 。",
