Accommodated bandit card descriptions for new basemod changes. Added a damagenumber to Massive Party's intent. Improved Happy Hit's intent explanation. Final boss should now work properly even if you use mod fuckery to kill the first phase.

--- a/src/main/resources/paleoftheancients/localization/eng/ui.json
+++ b/src/main/resources/paleoftheancients/localization/eng/ui.json
@@ -248,7 +248,7 @@
       "Intends to #yAttack for #b",
       " damage",
       " and #rMove #b",
-      " #b"," times"
+      ". Executed #b"," times"
     ]
   },
   "paleoftheancients:MassivePartyIntent": {
