Bandit's bossboard now has pseudo-intents, showing how much damage your action will deal to you and/or the enemies. Moved some files around so they're in their proper folders.

--- a/src/main/resources/paleoftheancients/localization/eng/ui.json
+++ b/src/main/resources/paleoftheancients/localization/eng/ui.json
@@ -223,7 +223,7 @@
   "paleoftheancients:StrengthSpace": {
     "TEXT": [
       "Strength Space",
-      "you gain #b"," #yStrength."
+      "the #yacting #yplayer gains #b"," #yStrength."
     ]
   },
 
