Reworked Reimu's core mechanics. She now transitions into bombspam at 30% health instead of becoming invincible.

--- a/src/main/resources/paleoftheancients/localization/eng/monsters.json
+++ b/src/main/resources/paleoftheancients/localization/eng/monsters.json
@@ -115,7 +115,10 @@
       "Divine Arts \"Omnidirectional Oni-Binding Circle\"",
       "Great Barrier \"Hakurei Danmaku Barrier\""
     ],
-    "NAME": "Shrine Maiden of Paradise"
+    "NAME": "Shrine Maiden of Paradise",
+    "DIALOG": [
+      "\"Fantasy Heaven\""
+    ]
   },
   "paleoftheancients:YinYangOrb": {
     "NAME": "Yin-Yang Orb"
