--- a/src/main/resources/paleoftheancients/localization/eng/powers.json
+++ b/src/main/resources/paleoftheancients/localization/eng/powers.json
@@ -326,7 +326,7 @@
   "paleoftheancients:HakureiShrineMaidenPower": {
     "NAME": "Hakurei Shrine Maiden",
     "DESCRIPTIONS": [
-      "At the end of her turn, summon up to #b",
+      "At the end of her turn, if no #ySpellcard is active, summon up to #b",
       " #yYin-Yang #yOrbs. If there are no #yYin-Yang #yOrbs alive, summon #b",
       " instead."
     ]
