New pale boss: Time eater.er.

--- a/src/main/resources/paleoftheancients/localization/eng/monsters.json
+++ b/src/main/resources/paleoftheancients/localization/eng/monsters.json
@@ -220,5 +220,19 @@
       "@Look@ @who's@ @on@ @top@ @of@ @the@ @game!@",
       "You know the game quite well."
     ]
+  },
+
+  "paleoftheancients:TimeEaterer": {
+    "MOVES": [
+      "Haste",
+      "Singular Apocalypse",
+      "Dual Apocalypse",
+      "Triple Apocalypse"
+    ],
+    "DIALOG": [
+      "@The@ @Abyss@ @awaits!@",
+      "@The@ @Void@ @beckons!@",
+      "@Chaos@ @reigns@ @eternal!@"
+    ]
   }
 }
